--- a/build.gradle
+++ b/build.gradle
@@ -22,7 +22,6 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-web'
     implementation 'org.springframework.boot:spring-boot-starter-security'
     implementation 'org.springframework.boot:spring-boot-starter-validation'
-    // Removed Thymeleaf - using REST API for React frontend
     implementation 'org.springframework.boot:spring-boot-starter-actuator'
 
     // Database
@@ -37,8 +36,9 @@ dependencies {
     runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.12.3'
     runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.12.3'
 
-    // File upload
+    // Utilities
     implementation 'commons-io:commons-io:2.11.0'
+    implementation 'org.apache.commons:commons-lang3:3.12.0'
 
     // Lombok
     compileOnly 'org.projectlombok:lombok'
